# beancount-v3-mercury

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
beancount_mercury/: checking.py  checking_test.py
