[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beancount-v3-mercury"
version = "1.0.0"
description = "Import Mercury banking transactions into beancount format"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Enrique Carpintero" },
    { name = "Michael Lynch" },
]
keywords = ["mercury", "beancount", "bookkeeping", "finance", "beangulp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "beancount>=2.3.5",
    "beangulp>=0.2.0",
    "titlecase>=2.0.0",
]

[project.urls]
Repository = "https://github.com/EnriqCG/beancount-v3-mercury"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=7.0", "ruff>=0.11"]

[tool.hatch.build.targets.wheel]
packages = ["beancount_mercury"]

[tool.ruff]
target-version = "py310"
line-length = 80

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.pytest.ini_options]
testpaths = ["beancount_mercury"]
